Fix torrent preview category image being cropped too much at some very specific resolutions

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -708,7 +708,7 @@ html, body {
     width: 11.7%;
     }
     .torrent-preview-table .tr-cat {
-    width: 9.1%;
+    width: 9.7%;
      }
      th, .home-td, .user-td {
      padding: 2px 0.3%!important;
